# sprig

./: .appveyor.yml  .coveragerc  .flake8  .gitignore  .pylintrc  .python-version  .readthedocs.yml  .travis.yml  MANIFEST.in  Makefile  constraints-latest.txt  constraints.txt  init_env.sh  pyproject.toml  requirements-dev.in  requirements-hack.in  requirements-prod.in  requirements-tox.in  requirements.txt  setup.py  tox.ini
.github/workflows/: pypackage.yml
docs/: conf.py  index.rst
experiments/: test_comb_benchmark.py
requirements/: dev.txt  tox.txt
src/sprig/: comb.py  dictutils.py  features.py  graphutils.py  intervals.py  iterutils.py  local_time.py  local_time.pyi  logs.py  logs_async.py  pathutils.py  streamutils.py
src/sprig/recipes/: log_recipes.py
tests/: test_bucket_merge.py  test_comb.py  test_dictutils.py  test_intervals.py  test_iterutils.py  test_local_time.py  test_pathutils.py  test_versions.py
